opam-version: "2.0"
name:         "digestif"
maintainer:   [ "Eyyüb Sari <eyyub.sari@epitech.eu>"
                "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
authors:      [ "Eyyüb Sari <eyyub.sari@epitech.eu>"
                "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
homepage:     "https://github.com/mirage/digestif"
bug-reports:  "https://github.com/mirage/digestif/issues"
dev-repo:     "git+https://github.com/mirage/digestif.git"
doc:          "https://mirage.github.io/digestif/"
license:      "MIT"
synopsis:     "Hashes implementations (SHA*, RIPEMD160, BLAKE2* and MD5)"
description: """
Digestif is a toolbox to provide hashes implementations in C and OCaml.

It uses the linking trick and user can decide at the end to use the C implementation or the OCaml implementation.

We provides implementation of:
 * MD5
 * SHA1
 * SHA224
 * SHA256
 * SHA384
 * SHA512
 * BLAKE2B
 * BLAKE2S
 * RIPEMD160
"""

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]
install:  [
  [ "dune" "install" "-p" name ] {with-test}
  [ "ocaml" "./test/test_runes.ml" ] {with-test}
]

depends: [
  "ocaml"           {>= "4.08.0"}
  "dune"            {>= "2.6.0"}
  "conf-pkg-config" {build}
  "eqaf"
  "fmt"            {with-test}
  "alcotest"       {with-test}
  "bos"            {with-test}
  "astring"        {with-test}
  "fpath"          {with-test}
  "rresult"        {with-test}
  "ocamlfind"      {with-test}
]
depopts: [
  "ocaml-freestanding"
]

conflicts: [
  "mirage-xen" {< "6.0.0"}
  "ocaml-freestanding" {< "0.6.0"}
]
