(copy_files# ../src-c/native/*.c)

(rule
 (deps blake2b.c blake2s.c md5.c ripemd160.c sha1.c sha256.c sha512.c sha3.c
   whirlpool.c misc.c stubs.c Makefile)
 (targets libdigestif_freestanding_stubs.a)
 (action
  (no-infer
   (progn
    (run %{make})))))

(install
 (package digestif)
 (section lib)
 (files libdigestif_freestanding_stubs.a))
