(library
 (name digestif_c)
 (public_name digestif.c)
 (implements digestif)
 (libraries stdlib-shims bigarray-compat eqaf)
 (private_modules digestif_native digestif_eq digestif_conv digestif_by
   digestif_bi)
 (foreign_stubs
  (language c)
  (names blake2b blake2s md5 ripemd160 sha1 sha256 sha512 sha3 whirlpool misc
    stubs)
  (flags
   (:standard -I./native/)))
 (flags
  (:standard -no-keep-locs)))

(include_subdirs unqualified)

(copy_files# ../src/*.ml)
