(library
 (name        digestif_ocaml)
 (public_name digestif.ocaml)
 (wrapped     false)
 (libraries   bigarray eqaf)
 (flags       (:standard -no-keep-locs)))

(rule (copy# ../src/digestif.mli     digestif.mli))
(rule (copy# ../src/digestif_bi.ml   digestif_bi.ml))
(rule (copy# ../src/digestif_by.ml   digestif_by.ml))
(rule (copy# ../src/digestif_eq.ml   digestif_eq.ml))
(rule (copy# ../src/digestif_conv.ml digestif_conv.ml))
(rule (copy# ../src/digestif_hash.ml digestif_hash.ml))
