(library
 (name digestif_ocaml)
 (public_name digestif.ocaml)
 (implements digestif)
 (libraries stdlib-shims bigarray-compat eqaf)
 (private_modules xor digestif_eq digestif_conv digestif_by digestif_bi
   baijiu_whirlpool baijiu_sha1 baijiu_sha256 baijiu_sha384 baijiu_sha224
   baijiu_sha512 baijiu_sha3_224 baijiu_sha256 baijiu_sha3_384
   baijiu_sha3_512 baijiu_rmd160 baijiu_md5 baijiu_blake2s baijiu_blake2b)
 (flags
  (:standard -no-keep-locs)))

(copy_files# ../src/*.ml)
